--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     </head>
 
     <body>
+        <div>
+            <button id="rock">ROCK</button>
+            <button id="paper">PAPER</button>
+            <button id="scissors">SCISSORS</button>
+        </div>
+
+        <div id="results">
+
+        </div>
         <script src="java.js"></script>
     </body>
 </html>
